assert-struct/tests/snapshots/slices__slice_pattern.snap
---
source: assert-struct/tests/slices.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/slices_errors/slice_pattern.rs:15:21
   |
15 |         values: [1, 5, 3] 
   |                     ^ got 2
